[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/Fonts/AppleTea-z8R1a.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/cursor.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/ReplaysMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/ButtonTypeG2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/SubTheme.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/Menus/ButtonTypeB.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Menus/MenuTheme.tres" type="Theme" id=7]
[ext_resource path="res://Scenes/Menus/AltInputs.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Menus/UIFrameTimer.gd" type="Script" id=10]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "transit_in"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=54]
resource_name = "transit_to_battle"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/GameViewport.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "transit_to_settings"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/SettingsMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[sub_resource type="DynamicFont" id=19]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=98]
size = 30
use_filter = true
extra_spacing_top = 13
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=48]

[sub_resource type="DynamicFont" id=49]
size = 23
use_filter = true
extra_spacing_top = 13
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=50]
default_font = SubResource( 49 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 98 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 48 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=53]
size = 20
use_filter = true
extra_spacing_top = 13
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=52]
default_font = SubResource( 53 )
Button/colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_hover = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 98 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 48 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=20]
size = 20
use_filter = true
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=22]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=24]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=26]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=28]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[node name="ReplaysMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="AltInputs" parent="." instance=ExtResource( 8 )]

[node name="Transition" type="AnimationPlayer" parent="."]
autoplay = "transit_in"
anims/RESET = SubResource( 3 )
anims/transit_in = SubResource( 4 )
anims/transit_to_battle = SubResource( 54 )
anims/transit_to_settings = SubResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.8, 0.8, 0.8, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="Background"]
margin_left = 128.0
margin_top = 88.0
margin_right = 623.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
text = "Replays"

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="Background"]
margin_left = 640.0
margin_top = 256.0
margin_right = 648.0
margin_bottom = 984.0
color = Color( 0.356863, 0.356863, 0.356863, 1 )

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( 152, 284 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 11 )
anims/default = SubResource( 12 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 13 )
anims/default = SubResource( 14 )

[node name="ReplaysList" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 504.0
margin_bottom = 954.0

[node name="SelectReplay" parent="ReplaysList" instance=ExtResource( 6 )]
margin_right = 344.0
focus_neighbour_top = NodePath("../Return")
text = "Select Replay"

[node name="WatchReplay" parent="ReplaysList" instance=ExtResource( 6 )]
margin_top = 60.0
margin_right = 344.0
margin_bottom = 116.0
disabled = true
text = "Watch Replay"

[node name="Blank5" type="Label" parent="ReplaysList"]
margin_top = 120.0
margin_right = 344.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 19 )
text = " "

[node name="RenameReplay" parent="ReplaysList" instance=ExtResource( 6 )]
margin_top = 153.0
margin_right = 344.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -472, 308 )
disabled = true
text = "Rename Replay"

[node name="DeleteReplay" parent="ReplaysList" instance=ExtResource( 6 )]
margin_top = 213.0
margin_right = 344.0
margin_bottom = 269.0
disabled = true
text = "Delete Replay"

[node name="Blank4" type="Label" parent="ReplaysList"]
margin_top = 273.0
margin_right = 344.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 19 )
text = " "

[node name="Return" parent="ReplaysList" instance=ExtResource( 6 )]
margin_top = 306.0
margin_right = 344.0
margin_bottom = 362.0
focus_neighbour_bottom = NodePath("../SelectReplay")
text = "Return to Settings"

[node name="SavedReplays" type="ColorRect" parent="."]
margin_left = 768.0
margin_top = 256.0
margin_right = 1672.0
margin_bottom = 768.0
color = Color( 0.8, 0.8, 0.8, 1 )

[node name="ReplaysScroll" type="ScrollContainer" parent="SavedReplays"]
margin_left = 16.0
margin_top = 6.0
margin_right = 928.0
margin_bottom = 502.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="ReplaysList2" type="VBoxContainer" parent="SavedReplays/ReplaysScroll"]
margin_right = 912.0
size_flags_horizontal = 3
custom_constants/separation = -6

[node name="Up" type="Node" parent="SavedReplays"]
script = ExtResource( 10 )

[node name="Down" type="Node" parent="SavedReplays"]
script = ExtResource( 10 )

[node name="ReplayInfo" type="GridContainer" parent="."]
margin_left = 768.0
margin_top = 808.0
margin_right = 1672.0
margin_bottom = 936.0
custom_constants/vseparation = -3
custom_constants/hseparation = 0
columns = 2

[node name="HSplitContainer" type="HSplitContainer" parent="ReplayInfo"]
margin_right = 452.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="DateTime" type="Label" parent="ReplayInfo/HSplitContainer"]
margin_right = 188.0
margin_bottom = 44.0
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Date and Time:"

[node name="DateTime2" type="Label" parent="ReplayInfo/HSplitContainer"]
margin_left = 200.0
margin_right = 452.0
margin_bottom = 44.0
size_flags_horizontal = 3
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Test"
align = 2
clip_text = true

[node name="HSplitContainer2" type="HSplitContainer" parent="ReplayInfo"]
margin_left = 452.0
margin_right = 904.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Player1" type="Label" parent="ReplayInfo/HSplitContainer2"]
margin_right = 145.0
margin_bottom = 44.0
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "                   P1:"

[node name="Player1Name" type="Label" parent="ReplayInfo/HSplitContainer2"]
margin_left = 157.0
margin_right = 452.0
margin_bottom = 44.0
size_flags_horizontal = 3
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Test"
align = 2
clip_text = true

[node name="HSplitContainer3" type="HSplitContainer" parent="ReplayInfo"]
margin_top = 41.0
margin_right = 452.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Version" type="Label" parent="ReplayInfo/HSplitContainer3"]
margin_right = 183.0
margin_bottom = 44.0
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Game Version:"

[node name="Version2" type="Label" parent="ReplayInfo/HSplitContainer3"]
margin_left = 195.0
margin_right = 452.0
margin_bottom = 44.0
size_flags_horizontal = 3
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Test"
align = 2
clip_text = true

[node name="HSplitContainer4" type="HSplitContainer" parent="ReplayInfo"]
margin_left = 452.0
margin_top = 41.0
margin_right = 904.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Player2" type="Label" parent="ReplayInfo/HSplitContainer4"]
margin_right = 152.0
margin_bottom = 44.0
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "                   P2:"

[node name="Player2Name" type="Label" parent="ReplayInfo/HSplitContainer4"]
margin_left = 164.0
margin_right = 452.0
margin_bottom = 44.0
size_flags_horizontal = 3
theme = SubResource( 50 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "Test"
align = 2
clip_text = true

[node name="Mismatch" type="Label" parent="."]
margin_left = 768.0
margin_top = 896.0
margin_right = 1298.0
margin_bottom = 933.0
theme = SubResource( 52 )
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
text = "Game Version mismatch, replay may not play correctly!"

[node name="RenameMenu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.5 )

[node name="ColorRect" type="ColorRect" parent="RenameMenu"]
margin_left = 416.0
margin_top = 352.0
margin_right = 1504.0
margin_bottom = 728.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="ColorRect2" type="ColorRect" parent="RenameMenu"]
margin_left = 424.0
margin_top = 360.0
margin_right = 1496.0
margin_bottom = 720.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Header" type="Label" parent="RenameMenu"]
margin_left = 640.0
margin_top = 360.0
margin_right = 1280.0
margin_bottom = 456.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "Rename Replay"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="RenameMenu/Header"]
margin_left = 120.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 88.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="RenameList" type="VBoxContainer" parent="RenameMenu"]
margin_left = 536.0
margin_top = 480.0
margin_right = 1384.0
margin_bottom = 687.0

[node name="Rename" parent="RenameMenu/RenameList" instance=ExtResource( 4 )]
margin_right = 848.0

[node name="InvalidFilename" type="HSplitContainer" parent="RenameMenu/RenameList"]
margin_top = 60.0
margin_right = 848.0
margin_bottom = 87.0
split_offset = 330

[node name="Blank2" type="Label" parent="RenameMenu/RenameList/InvalidFilename"]
margin_right = 330.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -902, -124 )
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
align = 1

[node name="Label" type="Label" parent="RenameMenu/RenameList/InvalidFilename"]
margin_left = 342.0
margin_right = 848.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -902, -124 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.933333, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Invalid Filename"
align = 1

[node name="SaveName" parent="RenameMenu/RenameList" instance=ExtResource( 6 )]
margin_top = 91.0
margin_right = 848.0
margin_bottom = 147.0
text = "Save Name"

[node name="CancelRename" parent="RenameMenu/RenameList" instance=ExtResource( 6 )]
margin_top = 151.0
margin_right = 848.0
margin_bottom = 207.0
text = "Cancel"

[node name="Cursor" type="Sprite" parent="RenameMenu"]
position = Vector2( 504, 508 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RenameMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 21 )
anims/default = SubResource( 22 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="RenameMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 23 )
anims/default = SubResource( 24 )

[node name="DeleteMenu" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.5 )

[node name="ColorRect" type="ColorRect" parent="DeleteMenu"]
margin_left = 448.0
margin_top = 352.0
margin_right = 1472.0
margin_bottom = 728.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="ColorRect2" type="ColorRect" parent="DeleteMenu"]
margin_left = 456.0
margin_top = 360.0
margin_right = 1464.0
margin_bottom = 720.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Header" type="Label" parent="DeleteMenu"]
margin_left = 640.0
margin_top = 360.0
margin_right = 1280.0
margin_bottom = 456.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
text = "Confirm Deletion"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="DeleteMenu/Header"]
margin_left = 88.0
margin_top = 80.0
margin_right = 552.0
margin_bottom = 88.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="Label" type="Label" parent="DeleteMenu"]
margin_left = 512.0
margin_top = 480.0
margin_right = 1408.0
margin_bottom = 583.0
theme = ExtResource( 5 )
text = "DO you really want to Delete this replay?
This will move it to your Trash."
align = 1
autowrap = true

[node name="DeleteList" type="HBoxContainer" parent="DeleteMenu"]
margin_left = 656.0
margin_top = 616.0
margin_right = 1504.0
margin_bottom = 672.0

[node name="Delete" parent="DeleteMenu/DeleteList" instance=ExtResource( 6 )]
margin_right = 422.0
size_flags_horizontal = 3
text = "Delete Replay"

[node name="CancelDelete" parent="DeleteMenu/DeleteList" instance=ExtResource( 6 )]
margin_left = 426.0
margin_right = 848.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Cursor" type="Sprite" parent="DeleteMenu"]
position = Vector2( 617, 640 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeleteMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 25 )
anims/default = SubResource( 26 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="DeleteMenu/Cursor"]
autoplay = "default"
anims/RESET = SubResource( 27 )
anims/default = SubResource( 28 )
